	
MNEMOSYNE 1.1 :

-Added statistics for the current card to the statistics window.
-More features for plugin writers. Arbitrary code can now be run after the
 database is loaded, as well as code to intercept and modify question and
 answer strings before they are displayed. There is a plugin directory in
 the source distribution with examples, e.g. to activate all the categories
 on startup, or to add the last grade to the answer text.
-New cards can either be learned in random order or in the order that they 
 were added (configurable through the GUI).
-Prioritise cards forgotten during the review over cards which have not yet 
 been committed to long-term memory.
-Improved scheduling of overdue cards, by placing those with a shorter 
 interval first. Being a day late on an interval of 2 could be much worse 
 than being a day late on an interval of 50.
-Hebrew translation by Mical T.
	

	
MNEMOSYNE 1.0.2 : 2008-07-10

-Added import/export support for CueCard wcu files (Chris Aakre).
-Added features to improve display of map cards from svgtoquiz (Timothy 
 Bourke).
-Added support for Mac installer through py2app (Konrad Wojas).
-On OSX, Mnemosyne now stores its data in Library/Mnemosyne (Konrad Wojas).
-Added <protect>...</protect> tags. Text within these tags will not be
 touched by 'increase size of non-latin characters' (Konrad Wojas).
-Changed compression format of the backups from bz2 to gz. This results in
 less compression, but a much faster program exit (suggested by Konrad Wojas).
-Added midi files to "import sound" file dialog (suggested by Johan Forsberg).
-Polish translation by Tomasz Nazarenko.
-Japanese translation by Patrick Kenny.	
-Persian translation by Bahman Eslami.
-Brazilian Portugese translation by Fabio Kreusch.
-Make dvipng invocation more robust. Especially helpful for Ubuntu users.
 (Thanks to Stephen Boulet and franny1).
-Fixed bug where day_starts_at was not working (Konrad Wojas).